<resources>
    <string name="app_name">Battleship</string>
    <string name="choose_level">Choose level</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>
    <string name="level_last">Last</string>
    <string name="new_game">New game</string>
    <string name="play_again">Play again</string>
    <string name="turn">Turn: \</string>
    <string name="your_turn">Player\'s turn</string>
    <string name="computer_turn">Computer\'s turn</string>
    <string name="your_board">Your board: </string>
    <string name="computer_board">Computer\'s board: </string>
    <string name="win">You WON!!!</string>
    <string name="lose">You LOSE</string>
    <string name="game_settings">Game settings</string>
    <string name="cell_status_vacant">Vacant</string>
    <string name="cell_status_unknown">Unknown</string>
    <string name="cell_status_occupied">Occupied</string>
    <string name="cell_status_hit">Hit</string>
    <string name="cell_status_missed">Missed</string>
    <string name="cell_status_ship_drowned">Drowned</string>
    <string name="wait_to_computer_finish">Please wait to computer to finish turn</string>
    <string name="computer_finish_turn">Computer finihsed his turn</string>
    <string name="logo">logo</string>
    <string name="ship">ship</string>
    <string name="target">target</string>
    <string name="highscores">High scores</string>
    <string name="enter_name">You win!!! Please enter your name</string>
    <string name="enter_name_empty">Please enter your name to be in our winner table</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="points">Points</string>
    <string name="no_data">No data</string>
    <string name="top_users">Top</string>
    <string name="dont_have_sensor">Sorry you don\'t have the sensor to play as full game</string>
</resources>
