<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".HighscoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_hard"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/hardLevel"
            android:gravity="center"
            android:text="@string/level_hard" />

        <Button
            android:id="@+id/button_medium"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/mediumLevel"
            android:text="@string/level_medium" />

        <Button
            android:id="@+id/button_easy"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/easyLevel"
            android:text="@string/level_easy" />

    </LinearLayout>
</LinearLayout>